php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39504 xmlwriter_write_dtd_entity() creates Attlist tag, not enity
Submitted: 2006-11-13 19:05 UTC Modified: 2006-11-13 20:48 UTC
From: hannes dot magnusson at gmail dot com Assigned:
Status: Closed Package: *XML functions
PHP Version: 6CVS-2006-11-13 (CVS) OS: *
Private report: No CVE-ID: None
 [2006-11-13 19:05 UTC] hannes dot magnusson at gmail dot com
Description:
------------
xmlwriter_write_dtd_entity() creates attlist, not entity.

Proposed patch: 
http://home.oslo.nith.no/~maghan/xmlwriter_write_dtd_entity.patch.txt

Reproduce code:
---------------
<?php
$xw = xmlwriter_open_memory();
xmlwriter_start_document($xw, NULL, "UTF-8");
xmlwriter_write_dtd_entity($xw, "ent2", "val2");
xmlwriter_end_document($xw);
print xmlwriter_flush($xw, true);
?>


Expected result:
----------------
<?xml version="1.0" encoding="UTF-8"?>
<!ENTITY ent2 "val2">

Actual result:
--------------
<?xml version="1.0" encoding="UTF-8"?>
<!ATTLIST ent2 val2>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-11-13 20:48 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for the patch
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 12:00:01 2026 UTC