Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag,  not enity). (Hannes Magnusson) add test